[tool.poetry]
name = "Financial Resilience Modeller"
version = "0.0.2"
description = "Interface for modelling the financial robustness of entities during the covid-19 pandemic"
authors = ["Daniel J. Brereton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.2.0"
networkx = "^2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
