[tool.poetry]
name = "FRM"
version = "0.0.2"
description = "Interface for modelling the financial robustness of a network of entities during a simulation of the covid-19 pandemic"
authors = ["D. J. Brereton"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.0"
networkx = "^2.5"
pillow = "^8.1.0"
bokeh = "^2.2.3"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
selenium = "^3.141.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
