[tool.poetry]
name = "FRM"
version = "0.0.2"
description = "Interface for modelling the financial robustness of a network of entities during a simulation of the covid-19 pandemic"
authors = ["D. J. Brereton"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.0"
networkx = "^2.5"
pillow = "^8.1.0"
bokeh = "^2.2.3"
black = "^20.8b1"
pylint = "^2.6.0"
pyinstaller = "^4.2"

[tool.poetry.dev-dependencies]
scipy = "^1.6.0"
selenium = "^3.141.0"
geckodriver-autoinstaller = "^0.1.0"
chromedriver-autoinstaller = "^0.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
